W06 - Fixed Contrast issue with Calendar div.

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -252,7 +252,7 @@ td {
 }
 .trips_action{
     width: 100%;
-    background-color: beige;
+    background-color: #fafae3;
     display: flex;
     flex-direction: row;
 	justify-content: space-around;
@@ -261,7 +261,7 @@ td {
 }
 .trips_calendar_container{
     width: 100%;
-    background-color: beige;
+    background-color: #fafae3;
     display: flex;
     flex-direction: row;
 	justify-content: center;
